--- a/svm_wo-pca.ipynb
+++ b/svm_wo-pca.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "e3d1fa58-2a87-4864-99f4-321a619be54f",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "id": "f647236d-c921-459c-bb7d-f258a75cf225",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "id": "7d691178-65fb-479e-99e8-1fb2fc6887db",
    "metadata": {},
    "outputs": [
@@ -310,7 +310,7 @@
        "max      6.000000  512.329200  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "1ab5f672-9f67-40b8-b1e5-cf92ba53b3be",
    "metadata": {},
    "outputs": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "id": "e7e34497-6348-48bf-8b41-bf4807f12e9f",
    "metadata": {},
    "outputs": [],
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "id": "8645f8a0-166a-430e-8670-4d4c70a2bd2c",
    "metadata": {},
    "outputs": [],
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "id": "61ebe382-a043-42ac-9283-c000693a7bf7",
    "metadata": {},
    "outputs": [],
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "id": "2ea2ce31-ad4b-4c9b-a987-f45529fb663d",
    "metadata": {},
    "outputs": [],
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "id": "c950989a-3619-4f10-a90e-fe68feee9b59",
    "metadata": {},
    "outputs": [],
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "id": "9a0065b3-881f-4d4d-b784-5844be6f034e",
    "metadata": {},
    "outputs": [],
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "id": "ad203cc0-01ce-4b34-bb7d-859d73b335a5",
    "metadata": {},
    "outputs": [],
@@ -430,12 +430,12 @@
     "\n",
     "learning_rate = 0.001\n",
     "lambda_param = 0.01        # regularization strength\n",
-    "n_epochs = 5000            # passes over the data\n"
+    "n_epochs = 2000            # passes over the data\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "id": "f5c826d2-673c-4e4b-91fc-68f62223987a",
    "metadata": {},
    "outputs": [],
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "id": "db1b4ce8-53bd-4aef-aadd-860cfa624ff6",
    "metadata": {},
    "outputs": [],
@@ -474,27 +474,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "id": "bac70174-55f4-44b1-9f87-e296d705b9c4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train accuracy: 77.50439367311071 %\n",
-      "Test accuracy : 79.72027972027972 %\n",
-      "Weights w: [-0.02443339 -0.95944165 -0.00481004  0.00903729 -0.01297611 -0.00494118]\n",
-      "Bias b: -0.2720000000000002\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Evaluate on train and test\n",
     "y_train_pred = svm_predict(X_train)\n",
     "y_test_pred  = svm_predict(X_test)\n",
     "\n",
-    "# convert back to {0,1} if you want to compare with original Survived\n",
+    "# convert back to {0,1} like original dataset\n",
     "y_train_pred01 = (y_train_pred == 1).astype(int)\n",
     "y_test_pred01  = (y_test_pred == 1).astype(int)\n",
     "\n",
@@ -503,16 +492,53 @@
     "\n",
     "train_accuracy = np.mean(y_train_pred01 == y_train_true01)\n",
     "test_accuracy  = np.mean(y_test_pred01  == y_test_true01)\n",
-    "\n",
-    "print(\"Train accuracy:\", train_accuracy*100,\"%\")\n",
-    "print(\"Test accuracy :\", test_accuracy*100,\"%\")\n",
-    "print(\"Weights w:\", w)\n",
-    "print(\"Bias b:\", b)"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 34,
+   "id": "700be643-cf9e-4022-96d0-fd3e45861dc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "===== EVALUATION METRICS (SVM) =====\n",
+      "Accuracy:  0.7972\n",
+      "Precision: 0.7647\n",
+      "Recall:    0.6964\n",
+      "F1 Score:  0.7290\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "y_true = y_test_true01\n",
+    "y_pred = y_test_pred01\n",
+    "\n",
+    "TP = np.sum((y_true == 1) & (y_pred == 1))\n",
+    "TN = np.sum((y_true == 0) & (y_pred == 0))\n",
+    "FP = np.sum((y_true == 0) & (y_pred == 1))\n",
+    "FN = np.sum((y_true == 1) & (y_pred == 0))\n",
+    "\n",
+    "accuracy = (TP + TN) / (TP + TN + FP + FN)\n",
+    "precision = TP / (TP + FP + 1e-10)\n",
+    "recall = TP / (TP + FN + 1e-10)\n",
+    "f1 = 2 * precision * recall / (precision + recall + 1e-10)\n",
+    "\n",
+    "print(\"\\n===== EVALUATION METRICS (SVM) =====\")\n",
+    "print(f\"Accuracy:  {accuracy:.4f}\")\n",
+    "print(f\"Precision: {precision:.4f}\")\n",
+    "print(f\"Recall:    {recall:.4f}\")\n",
+    "print(f\"F1 Score:  {f1:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "id": "5c215caf-7573-45ab-b692-b8cc76d1cb7d",
    "metadata": {
     "scrolled": true
